@@ -1,35 +1,38 @@
 package hudson.plugins.active_directory;
 
 import java.lang.reflect.Field;
-import java.util.Arrays;
+import java.util.List;
 
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Test;
-import org.jvnet.hudson.test.FlagRule;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.springframework.security.authentication.AuthenticationServiceException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
-public class ActiveDirectoryLoginInFIPSModeTest {
+class ActiveDirectoryLoginInFIPSModeTest {
 
-	private ActiveDirectorySecurityRealm securityRealm;
-	private AbstractActiveDirectoryAuthenticationProvider authenticationProvider;
+    private ActiveDirectorySecurityRealm securityRealm;
+    private AbstractActiveDirectoryAuthenticationProvider authenticationProvider;
 
-	@ClassRule
-	public static FlagRule<String> fipsSystemPropertyRule =
-			FlagRule.systemProperty("jenkins.security.FIPS140.COMPLIANCE", "true");
+    private static String fipsSystemProperty;
 
-	@Before
-	public void setUp() throws NoSuchFieldException, IllegalAccessException {
-		securityRealm = new ActiveDirectorySecurityRealm("domain", Arrays.asList(new ActiveDirectoryDomain("name", "servers", "site", "bindName", "bindPasswordFIPS", TlsConfiguration.JDK_TRUSTSTORE)),
+    @BeforeAll
+    static void beforeAll() {
+        fipsSystemProperty = System.setProperty("jenkins.security.FIPS140.COMPLIANCE", "true");
+    }
+
+    @BeforeEach
+    void beforeEach() throws Exception {
+		securityRealm = new ActiveDirectorySecurityRealm("domain", List.of(new ActiveDirectoryDomain("name", "servers", "site", "bindName", "bindPasswordFIPS", TlsConfiguration.JDK_TRUSTSTORE)),
 		                                                 "site", "bindName", "bindPassword", "server", GroupLookupStrategy.AUTO, true, true,
 		                                                 null, true, null, true);
 		// Create a mock instance of AbstractActiveDirectoryAuthenticationProvider
@@ -39,23 +42,30 @@ public class ActiveDirectoryLoginInFIPSModeTest {
 		Field field = ActiveDirectorySecurityRealm.class.getDeclaredField("authenticationProvider");
 		field.setAccessible(true);
 		field.set(securityRealm, authenticationProvider);
+    }
 
-	}
-	
-	@Test
-	public void testAuthenticateWithShortPassword() {
+    @AfterAll
+    static void afterAll() {
+        if (fipsSystemProperty != null) {
+            System.setProperty("jenkins.security.FIPS140.COMPLIANCE", fipsSystemProperty);
+        } else {
+            System.clearProperty("jenkins.security.FIPS140.COMPLIANCE");
+        }
+    }
+
+    @Test
+    void testAuthenticateWithShortPassword() {
 		String username = "user";
 		String password = "short";
 
-		Exception exception = assertThrows(AuthenticationServiceException.class, () -> {
-			securityRealm.authenticate2(username, password);
-		});
+		Exception exception = assertThrows(AuthenticationServiceException.class, () ->
+			securityRealm.authenticate2(username, password));
 
 		assertEquals(Messages.passwordTooShortFIPS(),exception.getMessage() );
-	}
+    }
 
-	@Test
-	public void testAuthenticateWithValidPassword() {
+    @Test
+    void testAuthenticateWithValidPassword() {
         String username = "user";
 		String password = "verylongpassword";
 
@@ -68,5 +78,5 @@ public class ActiveDirectoryLoginInFIPSModeTest {
 		UserDetails userDetails = securityRealm.authenticate2(username, password);
 
 		assertEquals("user",userDetails.getUsername() );
-	}
+    }
 }
